force-app/main/default/objects/Idea__c/Idea__c.object-meta.xml
<CustomObject>
    <label>Staff Idea</label>
    <nameField>
        <displayFormat>Idea-{00000}</displayFormat>
        <label>Idea System #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staff Ideas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>