force-app/main/default/objects/Idea__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Suggestion</fullName>
            </value>
            <value>
                <fullName>Question</fullName>
            </value>
            <value>
                <fullName>Chicago</fullName>
            </value>
            <value>
                <fullName>Cook County</fullName>
            </value>
            <value>
                <fullName>Illinois</fullName>
            </value>
            <value>
                <fullName>National</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>