force-app/main/default/objects/Idea__c/fields/Created_Date_Summary__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Summary__c</fullName>
    <formula>IF(DATEVALUE(CreatedDate) = DATEVALUE(&quot;2018-11-28&quot;), &quot;Staff Retreat FY19&quot;, 

TEXT(month(datevalue(CreatedDate))) &amp; &quot;/&quot; &amp; text(day(datevalue(CreatedDate)))&amp; &quot;/&quot; &amp; text (year(datevalue(CreatedDate))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date, Summary</label>
    <type>Text</type>
</CustomField>