force-app/main/default/objects/Idea__c/fields/Idea_Body__c.field-meta.xml
<CustomField>
    <fullName>Idea_Body__c</fullName>
    <label>Idea Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>