force-app/main/default/objects/Idea__c/fields/Idea_Body_Short__c.field-meta.xml
<CustomField>
    <fullName>Idea_Body_Short__c</fullName>
    <description>The value of this field is populated through a Workflow Rule.</description>
    <label>Idea Body (Short)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>