force-app/main/default/objects/Idea__c/fields/Idea_Number__c.field-meta.xml
<CustomField>
    <fullName>Idea_Number__c</fullName>
    <displayFormat>Idea #{00000}</displayFormat>
    <label>Idea Number</label>
    <type>AutoNumber</type>
</CustomField>