force-app/main/default/objects/Idea__c/fields/Idea_Summary__c.field-meta.xml
<CustomField>
    <fullName>Idea_Summary__c</fullName>
    <formula>Idea_Number__c &amp; &quot; | &quot; &amp; Title__c 

&amp; br() &amp;
br() &amp;

Idea_Body_Short__c &amp; IF(LEN(Idea_Body_Short__c)=255,&quot;...&quot;, &quot;&quot;)

&amp; br() &amp;
br() &amp;

&quot;Number of Votes: &quot; &amp;  TEXT(Number_of_Votes__c) 

&amp; br() &amp;
br() &amp;
&quot;-----------------------------------------------------------------------------------------------------&quot;</formula>
    <label>Idea Summary</label>
    <type>Text</type>
</CustomField>