force-app/main/default/objects/Idea__c/fields/Number_of_Votes__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Votes__c</fullName>
    <label>Number of Votes</label>
    <summaryForeignKey>Vote__c.Voted_on_Record__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>