force-app/main/default/objects/Idea__c/fields/Phone_or_Text_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Phone_or_Text_Instructions__c</fullName>
    <label>Phone or Text Instructions</label>
    <type>TextArea</type>
</CustomField>