force-app/main/default/objects/Idea__c/fields/Question_Topic__c.field-meta.xml
<CustomField>
    <fullName>Question_Topic__c</fullName>
    <label>Topic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Culture</fullName>
            </value>
            <value>
                <fullName>Service Delivery Model</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Professional Development</fullName>
            </value>
            <value>
                <fullName>Engagement</fullName>
            </value>
            <value>
                <fullName>Expansion</fullName>
            </value>
            <value>
                <fullName>Childcare</fullName>
            </value>
            <value>
                <fullName>Financial Assistance</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Health &amp; Self-Care</fullName>
            </value>
            <value>
                <fullName>Housing Support</fullName>
            </value>
            <value>
                <fullName>Learning Tools</fullName>
            </value>
            <value>
                <fullName>Remote Working</fullName>
            </value>
            <value>
                <fullName>Resource List</fullName>
            </value>
            <value>
                <fullName>Unemployment Benefits</fullName>
            </value>
            <value>
                <fullName>Utilities</fullName>
            </value>
            <value>
                <fullName>Volunteer or Donate</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>