force-app/main/default/objects/Idea__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Approved for Sharing</fullName>
            </value>
            <value>
                <fullName>Pending Discussion</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Commonly Recommended by Cara</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>