force-app/main/default/objects/Idea__c/recordTypes/COVID_19_Resource.recordType-meta.xml
<RecordType>
    <fullName>COVID_19_Resource</fullName>
    <active>true</active>
    <label>COVID-19 Resource</label>
</RecordType>