force-app/main/default/objects/Idea__c/recordTypes/ERC_Suggestion.recordType-meta.xml
<RecordType>
    <fullName>ERC_Suggestion</fullName>
    <active>true</active>
    <label>ERC Suggestion</label>
</RecordType>