force-app/main/default/objects/Idea__c/recordTypes/General_Idea.recordType-meta.xml
<RecordType>
    <fullName>General_Idea</fullName>
    <active>true</active>
    <label>General Idea</label>
</RecordType>