force-app/main/default/objects/Idea__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Category__c</columns>
    <columns>Created_By_Summary__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>