force-app/main/default/objects/Idea__c/listViews/COVID_19_Resources.listView-meta.xml
<ListView>
    <fullName>COVID_19_Resources</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Category__c</columns>
    <columns>Created_By_Summary__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Idea__c.COVID_19_Resource</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>4/22/2020 12:00 AM</value>
    </filters>
    <label>COVID-19 Resources (New Submissions)</label>
    <language>en_US</language>
</ListView>